components/heptagon/test/good/clocks.ept
node f(x:bool) returns (y:bool)
let
  y = x when x
tel

node main() returns (y:bool)
var c:bool;
let
  c = true fby true fby false fby c;
  y = merge c (f(c)) false;
tel
